test/fails/noMain.imp

fun  factorial(n)
{       
        return n;
}
